src/4-aks/provisioning/scripts/apps/http-ingress.clean.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress-clean  
  annotations:        
    kubernetes.io/ingress.class: nginx  
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"  
spec:
  rules:  
  - host: resultaatgroep.cf
    http:
      paths:
      -  backend:
          serviceName: clippy
          servicePort: 80
