src/4-aks/provisioning/scripts/apps/http-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress  
  annotations:        
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - www.resultaatgroep.cf
    secretName: clippy-http-tls
  rules:
  - host: www.resultaatgroep.cf
    http:
      paths:
      - path: /
        backend:
          serviceName: clippy
          servicePort: 80
