src/4-aks/provisioning/scripts/apps/podinfo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: podinfo  
spec:  
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
      - name: podinfo
        image: pascalnaber/podinfo:2                
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m" 
        ports:
        - containerPort: 80   
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
spec:
  ports:
    - port: 80
  selector:
    app: podinfo
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinfo-ingress
  annotations:        
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - podinfo.resultaatgroep.cf
    secretName: podinfo-tls
  rules:
  - host: podinfo.resultaatgroep.cf
    http:
      paths:
      - path: /
        backend:
          serviceName: podinfo-service
          servicePort: 80
